--- a/_includes/elements-of-visual-design.html
+++ b/_includes/elements-of-visual-design.html
@@ -8,7 +8,7 @@
         <p>Lines are strokes connecting two points, and the most basic element of visual design. We can use them to create shapes, and when we repeat them, we can form patterns that create textures.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/line.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/line.jpg" alt="">
       </div>
     </div>
   </section>
@@ -20,7 +20,7 @@
         <p>Shapes are self-contained areas, usually formed by lines (although they may also be formed by using a different colour, value or texture). A shape has two dimensions: length and width.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/shape.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/shape.jpg" alt="">
       </div>
     </div>
   </section>
@@ -32,7 +32,7 @@
         <p>Negative space (also known as white space) is the empty area around a (positive) shape. The relation between the shape and the space is called figure/ground, where the shape is the figure and the area around the shape is the ground. We should be aware that when designing positive shapes, we are also designing negative spaces at the same time. Negative space is just as important as the positive shape itself — because it helps to define the boundaries of the positive space and brings balance to a composition.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/negative-space.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/negative-space.jpg" alt="">
       </div>
     </div>
   </section>
@@ -43,7 +43,7 @@
         <h2>Volume</h2>
         <p>Volume applies to visuals that are three-dimensional and have length, width and depth. We rarely use volume in visual design, because most digital products end up being viewed on a 2D screen, although some apps and websites do use 3D models and graphics. (Technically, though, 3D images viewed on a 2D screen are still 2D images.)</p>      </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/volume.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/volume.jpg" alt="">
       </div>
     </div>
   </section>
@@ -55,7 +55,7 @@
         <p>Value, quite simply, describes light and dark.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/value.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/value.jpg" alt="">
       </div>
     </div>
   </section>
@@ -67,7 +67,7 @@
         <p>Color is an element of light. Colour theory is a branch of design focused on the mixing and usage of different colours in design and art. In colour theory, an important distinction exists between colours that mix subtractively and colours that mix additively.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/color.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/color.jpg" alt="">
       </div>
     </div>
   </section>
@@ -79,7 +79,7 @@
         <p>Texture is the surface quality of an object.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/texture.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/texture.jpg" alt="">
       </div>
     </div>
   </section>
