--- a/_includes/laws-of-ux.html
+++ b/_includes/laws-of-ux.html
@@ -8,7 +8,7 @@
         <p>The time required to rapidly move to a target area is a function of the ratio between the distance to the target and the width of the target.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/fitts-law.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/fitts-law.png" alt="">
       </div>
     </div>
     <aside class="notes">
@@ -24,7 +24,7 @@
         <p>The time it takes to make a decision increases as the number of options increases.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/hick-law.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/hick-law.png" alt="">
       </div>
     </div>
   </section>
@@ -36,7 +36,7 @@
         <p>Users spend most of their time on other sites. This means that users prefer your site to work the same way as all the other sites they already know.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/jakob-law.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/jakob-law.png" alt="">
       </div>
     </div>
   </section>
@@ -49,7 +49,7 @@
         <p>People will perceive and interpret ambiguous or complex image as the simplest form possible, because it is the interpretation that requires the least cognitive effort of us.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/law-of-pragnanz.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/law-of-pragnanz.png" alt="">
       </div>
     </div>
   </section>
@@ -61,7 +61,7 @@
         <p>Objects that are close tend to join, and in the user experience, they are understood as members of the same group.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/law-of-roximity.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/law-of-roximity.png" alt="">
       </div>
     </div>
   </section>
@@ -73,7 +73,7 @@
         <p>The average person can only keep (±)7 items in their working memory.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/miller-law.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/miller-law.png" alt="">
       </div>
     </div>
   </section>
@@ -85,7 +85,7 @@
         <p>Any task will inflate until all of the available time is spent.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/parkinson-law.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/parkinson-law.png" alt="">
       </div>
     </div>
   </section>
@@ -97,7 +97,7 @@
         <p>Users have a propensity to best remember the first and last items in a series.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/serial-position-effect.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/serial-position-effect.png" alt="">
       </div>
     </div>
   </section>
@@ -109,7 +109,7 @@
         <p>Tesler's Law, also known as The Law of Conservation of Complexity, states that for any system there is a certain amount of complexity which cannot be reduced.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/tesler-law.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/tesler-law.png" alt="">
       </div>
     </div>
   </section>
@@ -121,7 +121,7 @@
         <p>The Von Restorff effect, also known as The Isolation Effect, predicts that when multiple similar object are present, the one that differs from the rest is most likely to be remembered.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/von-restorff-effect.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/von-restorff-effect.png" alt="">
       </div>
     </div>
   </section>
@@ -133,7 +133,7 @@
         <p>People remember uncompleted or interrupted tasks better than completed tasks.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/zeigarnik-effect.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/zeigarnik-effect.png" alt="">
       </div>
     </div>
   </section>
