--- a/_includes/principles-of-design.html
+++ b/_includes/principles-of-design.html
@@ -8,7 +8,7 @@
         <p>Unity has to do with creating a sense of harmony between all elements in a page. A page with elements that are visually or conceptually arranged together will likely create a sense of unity.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/unity.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/unity.jpg" alt="">
       </div>
     </div>
   </section>
@@ -20,7 +20,7 @@
         <p>Gestalt refers to our tendency to perceive the sum of all parts as opposed to the individual elements. The human eye and brain perceive a unified shape in a different way to the way they perceive the individual parts of such shapes. In particular, we tend to perceive the overall shape of an object first, before perceiving the details (lines, textures, etc.) of the object.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/gestalt.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/gestalt.jpg" alt="">
       </div>
     </div>
   </section>
@@ -32,7 +32,7 @@
         <p>Hierarchy shows the difference in importance of the elements in a design. Colour and size are the most common ways we can create hierarchy — for instance, by highlighting a primary button, or using larger fonts for headings. Items that appear at the top of a page or app also tend to be viewed as having a higher hierarchy than those appearing below.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/hierarchy.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/hierarchy.jpg" alt="">
       </div>
     </div>
   </section>
@@ -44,7 +44,7 @@
         <p>Balance is the principle governing how we distribute the elements of a design evenly. Balanced designs tend to appear calm, stable and natural, while imbalanced designs make us feel uneasy.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/balance.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/balance.jpg" alt="">
       </div>
     </div>
   </section>
@@ -56,7 +56,7 @@
         <p>We use contrast to make an element stand out by manipulating differences in colour, value, size and other factors. For instance, as designers (be it in logo design, UI design, etc.), we often use the colour red to make certain elements stand out. In iOS, red often appears in the “Delete” action to signify that an (often) irreversible action is about to occur. On the other hand, green is often something we use (at least in Western design) in positive actions such as “Go” and “Accept” — thus highlighting that we cannot ignore the cultural meaning of colours when designing for contrast. If you’re designing for a client in a far-off land, learn about and adjust your work to conform to the cultural considerations. For instance, ask yourself, “Is their red lucky or angry?” or “Is their black businesslike or funerary?”</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/contrast.png" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/contrast.png" alt="">
       </div>
     </div>
   </section>
@@ -68,7 +68,7 @@
         <p>Scale describes the relative sizes of the elements in a design. By using scale to make an element larger than others appearing with it, you can emphasise that element. Not only can you make an element stand out this way—you can also use scale to create a sense of depth (since nearer objects appear larger to the human eye). Exaggerated scales of images also add a certain level of interest and drama to them.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/scale.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/scale.jpg" alt="">
       </div>
     </div>
   </section>
@@ -80,7 +80,7 @@
         <p>Dominance creates focus on a single element. We can use colour, shape, contrast, scale, and/or positioning to achieve this. For instance, most websites have a main “hero” image, which uses dominance to appeal to users, drawing them to it naturally.</p>
       </div>
       <div class="col-4 offset-1">
-        <img class="img-fluid" src="/assets/img/dominance.jpg" alt="">
+        <img class="img-fluid" src="{{ site.baseurl }}/assets/img/dominance.jpg" alt="">
       </div>
     </div>
   </section>
@@ -88,9 +88,9 @@
 </section>
 
 <section>
-  <img class="img-fluid" src="/assets/img/google-homepage.jpg" alt="">
+  <img class="img-fluid" src="{{ site.baseurl }}/assets/img/google-homepage.jpg" alt="">
 </section>
 
 <section>
-  <img class="img-fluid" src="/assets/img/quartz-homepage.jpg" alt="">
+  <img class="img-fluid" src="{{ site.baseurl }}/assets/img/quartz-homepage.jpg" alt="">
 </section>
